--- a/README.rdoc
+++ b/README.rdoc
@@ -1,4 +1,4 @@
-== README
+== README (My Second Ever Rails App! Wahoo!!!!!) ==
 
 This README would normally document whatever steps are necessary to get the
 application up and running.
